# bevy_basisu_loader

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  ci_full.yml  ci_minimal.yml  release.yml  static.yml
assets/: alpha0_etc1s.basisu_ktx2  desk_uastc_hdr_4x4.ktx2  desk_uastc_hdr_4x4_mips_10.basisu_ktx2  desk_uastc_hdr_6x6_mips_10.basisu_ktx2  desk_uastc_hdr_6x6_mips_10.ktx2  gl_skybox_etc1s_cubemap_mips_12.ktx2  gl_skybox_uastc_cubemap_mips_12.basisu_ktx2  tough_uastc_ldr_4x4_mips_11.ktx2
crates/basisu-bindgen/: Cargo.toml  build.rs
crates/basisu-bindgen/src/: lib.rs
crates/basisu-sys/: Cargo.toml  basisu.mjs  basisu_sys.mjs  build.rs
crates/basisu-sys/src/: lib.rs  native.rs  web.rs
crates/basisu-sys/wasm/: basisu_vendor.js
crates/basisu-vendor/: Cargo.toml  build.rs
crates/basisu-vendor/src/: lib.rs  main.rs
crates/basisu-vendor/wasm/: basisu_vendor.js  basisu_vendor.wasm
crates/basisu_sys/: .gitignore  Cargo.toml  README.md  basisu_sys.js  build.rs
crates/basisu_sys/src/: lib.rs  native.rs  web.rs
crates/basisu_sys/wasm/: basisu_vendor.js  basisu_vendor.wasm
examples/test_scene/: Cargo.toml
examples/test_scene/src/: lib.rs  main.rs
prebuild/: basisu-vendor.js  basisu_vendor.wasm
prebuilt/: basisu-vendor.js  basisu_vendor.js  basisu_vendor.raw.wasm  basisu_vendor.wasm
src/: lib.rs  loader.rs
web/: basisu-vendor.js  basisu_vendor.js  basisu_vendor.wasm  index.html
web/debug/: basisu-vendor.js  basisu_vendor.wasm
