[package]
name = "bevy_basisu_loader"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
  "bevy_asset",
  "bevy_image",
  "bevy_render",
  "bevy_log",
] }
basisu-sys = { path = "crates/basisu-sys" }
serde = { version = "1", features = ["derive"] }
thiserror = { version = "2", default-features = false }

[workspace]
members = ["crates/*", "examples/test_scene"]
