[package]
name = "bevy_basisu_loader"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
  "bevy_asset",
  "bevy_image",
  "bevy_render",
  "bevy_log",
] }
serde = { version = "1", features = ["derive"] }
thiserror = { version = "2", default-features = false }
basisu-sys = { path = "crates/basisu-sys" }

[workspace]
members = ["crates/*", "examples/test_scene"]

[profile.web_release]
inherits = "release"
opt-level = "s"
lto = "thin"
codegen-units = 1
