[package]
name = "bevy_basisu_loader"
version = "0.1.3"
edition = "2024"
repository.workspace = true
license.workspace = true
description = "Provides a cross-platform, size-optimized KTX2 Basis Universal texture loader for Bevy"
keywords = ["bevy", "basis", "universal", "asset", "transcoder"]
exclude = ["vendor/", "assets/", "examples/", "web/", ".*"]

[workspace.package]
repository = "https://github.com/beicause/bevy_basisu_loader"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
  "bevy_asset",
  "bevy_image",
  "bevy_render",
  "bevy_log",
] }
serde = { version = "1", features = ["derive"] }
thiserror = { version = "2", default-features = false }
bevy_basisu_loader_sys = { version = "0.1", path = "crates/basisu_sys" }

[workspace]
members = ["crates/*", "examples/test_scene"]

[profile.web_release]
inherits = "release"
opt-level = "s"
lto = "thin"
codegen-units = 1
panic = "abort"
