[package]
name = "basisu-sys"
version = "0.1.0"
edition = "2024"

[features]
build-wasm-cli = ["dep:clap"]

[dependencies]
clap = { version = "4.5", features = ["derive"], optional = true }

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.106"
js-sys = "0.3.83"
wasm-bindgen-futures = "0.4.56"

[build-dependencies]
cc = "1.2"
bindgen = "0.72"

[[bin]]
name = "build-wasm-cli"
path = "src/bin/build_wasm_cli.rs"
required-features = ["build-wasm-cli"]
